--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
     <meta property="og:site_name" content="ایران فالوور |  خرید فالوور ایرانی | لایک اینستاگرام">
 
     <!--favicon icon-->
-    <link rel="icon" href="assets/img/favicon.ico" type="image/png" sizes="16x16">
+    <link rel="icon" href="favicon.ico" type="image/png" sizes="16x16">
 
     <!--google fonts-->
     
 
     
     <!--Bootstrap css-->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <!--Themify icon css-->
-    <link rel="stylesheet" href="assets/css/themify-icons.css">
+    <link rel="stylesheet" href="themify-icons.css">
     <!--Owl carousel css-->
-    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="owl.carousel.min.css">
+    <link rel="stylesheet" href="owl.theme.default.min.css">
     <!--custom css-->
-    <link rel="stylesheet" href="assets/css/style_ver%3D1.5.css">
+    <link rel="stylesheet" href="style_ver%3D1.5.css">
     <!--responsive css-->
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="responsive.css">
 
     <meta name="google-site-verification" content="LeodNRjhdoYwDsOqUxrGflKxTMMyFC6LjFZ3ymC4Vq8">
 
@@ -928,18 +928,18 @@
     </div>
 
 
-    <script src="assets/js/jquery-3.4.2.min_ver%3D0.1.js"></script>
+    <script src="jquery-3.4.2.min_ver%3D0.1.js"></script>
     <!--jQuery-->
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="bootstrap.min.js"></script>
     <!--Popper js-->
-    <script src="assets/js/popper.min.js"></script>
+    <script src="js/popper.min.js"></script>
     <!--Bootstrap js-->
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
+    <script src="jquery.magnific-popup.min.js"></script>
 
     <!--jquery easing js-->
-    <script src="assets/js/jquery.easing.min.js"></script>
+    <script src="jquery.easing.min.js"></script>
     <!--custom js-->
-    <script src="assets/js/scripts_ver%3D0.1.js"></script>
+    <script src="scripts_ver%3D0.1.js"></script>
 
 
 
